add nova rota, alterando packjson para executar o build no servidor
